kubernetes/szilardshome/infrastructure/controllers/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-internal-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "10.10.4.70"  
spec:
  parentRefs:
    - name: traefik-internal
      namespace: traefik-internal
  hostnames:
    - "argocd.internal.szilardshome.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
