kubernetes/szilardshome/infrastructure/controllers/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd-local.szilardshome.com`) # change to your domain
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
      # middlewares:
      #   - name: default-headers
